# mission-control

./: .dockerignore  .gitignore  Dockerfile  README.md  TAURI.md  copy-config.sh  docker-compose.yml  package-lock.json  package.json  push-to-github.sh
public/css/: style.css
public/js/: dashboard.js
src/: scheduler.js  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: manager.js
src/database/: database.js
src/routes/: dashboard.js  setup.js
src/services/: calendar.js  figma.js  github.js  integrations.js  shortcut.js  todoist.js
views/: dashboard.ejs  settings.ejs  setup.ejs
